--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="temperature2">&#xe650;</string>
     <string name="humidity">&#xe6bd;</string>
     <string name="aqi">&#xe6d3;</string>
+    <string name="switch1">&#xe670;</string>
+    <string name="switch2">&#xe676;</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
